# start-actix-workspace

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: database.rs  env.rs  lib.rs
frontend/: Cargo.toml
frontend/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
style/: tailwind.css
