[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
leptos_actix = { workspace = true, optional = true }
server_fn.workspace = true

http.workspace = true
cfg-if.workspace = true
thiserror.workspace = true

chrono.workspace = true
wasm-bindgen-futures.workspace = true
wasm-bindgen.workspace = true
serde-wasm-bindgen.workspace = true
dotenvy = {workspace = true, optional = true}

#sqlx = { version = "0.8.6", features = ["runtime-tokio", "runtime-tokio-rustls", "sqlite","macros", "chrono"] , optional = true}
# logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
tracing-wasm.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:leptos_actix",
    "dep:dotenvy"
    ]
