[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = { path = "../app", default-features = false, features = ["ssr"] }
leptos = { workspace = true, features = [ "ssr" ]}
leptos_actix.workspace = true

actix-web.workspace = true
actix-files.workspace = true
simple_logger.workspace = true 
#log.workspace = true


ring.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-log.workspace = true
dotenvy = {version ="0.15.7" }